<resources>
    <string name="app_name">MLImageLabel</string>
    <string name="loginText">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered">Not yet registered? Register here</string>
    <string name="login">SIGN IN</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_account">Already have account? Login here</string>
    <string name="homepage">HOMEPAGE</string>
    <string name="animcam">iVI</string>
    <string name="images">IMAGE</string>
    <string name="video">STORAGE</string>
    <string name="trending">Trending</string>
    <string name="dummy_text">Image processing is a very useful technology and demand seems to be growing every year</string>
    <string name="home">HOME</string>
    <string name="search">Search</string>
    <string name="get_image">Get image</string>
    <string name="upload_image">Upload image</string>
    <string name="upload">UPLOAD</string>
    <string name="select_image">Select image</string>
    <string name="imageprocess">Process image here after choose option of image, camera or from gallery.</string>
    <string name="homepage_storage">Upload image from gallery to Firebase storage</string>
    <string name="homepage_profile">View user profile here. All user account informations displayed here.</string>
    <string name="image_process">Image Process</string>
    <string name="storage">Storage</string>
    <string name="profile">Profile</string>
    <string name="user_email">user email</string>
    <string name="phoneNUM">012-3456789</string>
    <string name="facebookLink">Facebook link for Borrneo Bird Nest</string>

</resources>