<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/laayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_background"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logoutImage"
            android:layout_width="32dp"
            android:layout_height="44dp"
            android:layout_gravity="end"
            android:layout_marginLeft="180dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/header_background"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">
            <LinearLayout
                android:id="@+id/layoutImages"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_btn"
                android:layout_marginTop="25dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_process"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/numans"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="226dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/imageprocess"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:padding="1dp"
                        android:src="@drawable/imageprocess" />
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutStorage"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_btn"
                android:layout_marginTop="25dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storage"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/numans"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="223dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/homepage_storage"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:padding="5dp"
                        android:src="@drawable/storage" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutProfile"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_btn"
                android:layout_marginTop="25dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/numans"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/homepage_profile"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="15dp"
                        android:padding="1dp"
                        android:src="@drawable/profile" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        </ScrollView>


</RelativeLayout>
